...
        "vorarlberg" to "Vorarlberg / Форарльберг",
        "wien" to "Wien / Відень",
    )
private val labels =
    mapOf(
        "news" to ("Nachrichten" to "Новини"),
        "event" to ("Veranstaltungen" to "Події"),
        "lawAndDocuments" to ("Recht und Dokumente" to "Право та документи"),
        "benefitsAndSupport" to ("Leistungen und Hilfe" to "Виплати та допомога"),
        "financeTaxesAndConsumerRights" to
            ("Finanzen und Verbraucherrechte" to "Фінанси та права споживачів"),
        "health" to ("Gesundheit" to "Здоров’я"),
        "safetyAndEmergencies" to ("Sicherheit" to "Безпека"),
...
